# money-printer

./: .env.example  README.md  hello.py  pyproject.toml
src/generation/: video.py  voiceover.py
src/scrapers/: reddit_scraper.py  youtube_scraper.py
src/workflow/: pipeline.py
